--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.Fit_app_bachelor"
         tools:targetApi="31">
         <activity
+            android:name=".login.activities.ui.resetPassword.reset.TokenActivity"
+            android:exported="false" />
+        <activity
+            android:name=".login.activities.ui.resetPassword.recover.RecoverActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.home.StagesActivity"
             android:exported="false" />
         <activity
