--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,11 +49,13 @@ android {
 }
 
 dependencies {
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'org.postgresql:postgresql:42.2.9'
     implementation 'org.apache.commons:commons-dbcp2:2.9.0'
     implementation 'org.mindrot:jbcrypt:0.4'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.preference:preference:1.2.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
